# Heallink-AI

./: .cursorignore  .dockerignore  .gitignore  CLAUDE.local.md  CLAUDE.md  README.md  ai-engine-logs.txt  docker-compose.yml  docker-readme.md  package-lock.json  package.json  project-specs.md  tsconfig.json  vercel.json
.cursor/: mcp.json
.cursor/rules/: brandcolorsandfonts.mdc
app/api/: doctor-api.ts
app/components/doctors/: DoctorCard.tsx
app/dashboard/doctors/: page.tsx
app/dashboard/doctors/new/: page.tsx
apps/ai-engine/: AGENT_README.md  Dockerfile.agent  Dockerfile.dev  ENHANCEMENTS.md  README.md  REFACTORING.md  __init__.py  agent-entrypoint.sh  agent.py  app.py  avatar_agent_test.py  avatar_agent_v2.py  docker-entrypoint.sh  generate_requirements.py  main.py  pyproject.toml  requirements.txt
apps/ai-engine/agents/: base_agent.py  edge_case_agents.py  specialized_agents.py
apps/ai-engine/api/: health.py  metrics.py
apps/ai-engine/app/api/routes/: __init__.py  livekit.py  voice_assistant.py
apps/ai-engine/app/core/: config.py
apps/ai-engine/app/services/: voice_assistant.py
apps/ai-engine/core/: __init__.py  config.py  errors.py  logging.py  middleware.py  rate_limiter.py
apps/ai-engine/models/: data_models.py
apps/ai-engine/services/: healthcare_services.py
apps/ai-engine/utils/: monitoring.py
apps/api/: .env.example  Dockerfile  Dockerfile.dev  README.md  nest-cli.json  package.json  tsconfig.json
apps/api/src/: app.module.ts  index.ts  main.ts
apps/api/src/config/: configuration.ts
apps/api/src/public/: swagger-theme.css
apps/api/test/users/: profile.e2e-spec.ts
apps/avatar-engine/: Dockerfile.dev  Dockerfile.simple  LIVEKIT_INTEGRATION_GUIDE.md  QUICK_FIX_SETUP.md  README.md  SETUP.md  SETUP_GUIDE.md  TECHNICAL_PIPELINE_DOCUMENTATION.md  docker_quick_start.sh  livekit_client_example.html  pyproject.toml  quick_start.sh  requirements.txt  start_web_client.sh  test_avatar_debug.py  test_avatar_render.py  test_install.py  test_livekit_integration.sh
apps/avatar-engine/assets/: README.md
apps/avatar-engine/assets/avatars/: README.md
apps/avatar-engine/assets/models/: README.md
apps/avatar-engine/config/: avatars.yaml
apps/avatar-engine/src/: __init__.py  main.py  test_avatar_debug.py
apps/avatar-engine/src/animation/: __init__.py  emotion_mapper.py  facial_animation.py  facs_controller.py
apps/avatar-engine/src/api/: __init__.py  routes.py
apps/avatar-engine/src/config/: __init__.py  settings.py
apps/avatar-engine/src/core/: __init__.py  avatar_session.py  config.py
apps/avatar-engine/src/lipsync/: __init__.py  lip_sync_engine.py  rhubarb_processor.py  wav2lip_processor.py
apps/avatar-engine/src/musetalk/: __init__.py  dwpose_detector.py  lip_sync_engine.py  model_manager.py
apps/avatar-engine/src/plugin/: __init__.py  avatar_service.py  avatar_session.py  avatar_worker.py
apps/avatar-engine/src/renderer/: __init__.py  avatar_renderer.py  material_manager.py  package-lock.json  package.json  scene_manager.py  webpack.config.js
apps/avatar-engine/src/renderer/src/: index.html  index.js  styles.css
apps/avatar-engine/src/streaming/: __init__.py  audio_encoder.py  livekit_streamer.py  video_encoder.py  webrtc_streamer.py
apps/avatar-engine/src/utils/: __init__.py  logging.py
apps/avatar-engine/tools/: test_avatar.py
apps/avatar-engine/web-client/: index.html
apps/heallink/: .eslintrc.json  Dockerfile  Dockerfile.dev  README.md  eslint.config.mjs  jest.config.mjs  jest.setup.mjs  middleware.ts  next.config.js  next.config.ts  package.json
apps/heallink-admin/: Dockerfile  Dockerfile.dev  middleware.ts  package.json
apps/heallink-admin/app/: auth.ts  globals.css  layout.tsx  page.tsx  providers.tsx
apps/heallink-admin/app/api/: adminApi.ts  apiClient.ts  auth-api.ts
apps/heallink-admin/app/auth-required/: page.tsx
apps/heallink-admin/app/dashboard/: layout.tsx  page.tsx
apps/heallink-admin/app/error/: page.tsx
apps/heallink-admin/app/hooks/: useAdminHooks.ts
apps/heallink-admin/app/reset-password/: page.tsx
apps/heallink-admin/app/signout/: page.tsx
apps/heallink-admin/app/theme/: ThemeProvider.tsx
apps/heallink-admin/app/types/: auth-types.ts  next-auth.d.ts
apps/heallink-providers/: Dockerfile  Dockerfile.dev  middleware.ts  package.json
apps/heallink-providers/app/: api-types.ts  auth.ts  globals.css  layout.tsx  page.tsx  providers.tsx
apps/heallink-providers/app/api/: apiClient.ts  appointments-api.ts  auth-api.ts  doctor-api.ts  knowledge-base-api.ts  patient-api.ts  provider-api.ts  reports-api.ts  staff-api.ts
apps/heallink-providers/app/dashboard/: page.tsx
apps/heallink-providers/app/error/: page.tsx
apps/heallink-providers/app/onboarding/: layout.tsx  page.tsx
apps/heallink-providers/app/providers/: QueryProvider.tsx
apps/heallink-providers/app/signin/: page.tsx
apps/heallink-providers/app/signout/: page.tsx
apps/heallink-providers/app/signup/: page.tsx
apps/heallink-providers/app/theme/: ThemeProvider.tsx
apps/heallink-providers/app/types/: auth-types.ts
apps/heallink-providers/app/verify-otp/: page.tsx
apps/heallink/app/: api-types.ts  auth.ts  error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
apps/heallink/app/api/: apiClient.ts  auth-api.ts  user-api.ts
apps/heallink/app/auth-required/: page.tsx
apps/heallink/app/dashboard/: layout.tsx  metadata.ts  page.tsx
apps/heallink/app/hooks/: useUserApi.ts
apps/heallink/app/legal/: layout.tsx  page.tsx
apps/heallink/app/profile/: page.tsx
apps/heallink/app/providers/: LiveKitProvider.tsx  VoiceAssistantProvider.tsx  index.tsx
apps/heallink/app/theme/: ThemeProvider.tsx
apps/heallink/app/types/: auth-types.ts  next-auth.d.ts
apps/heallink/public/: site.webmanifest
logos/: README.md
scripts/: validate-aws-setup.sh
scripts/localstack/: init-aws.sh
src/: app.module.ts
src/modules/auth/: admin-auth.service.ts  auth.controller.ts  auth.module.ts  auth.service.ts
src/modules/emails/: email.config.ts  email.service.ts
(+428 files in other folders)
