[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "heallink-ai-engine"
version = "0.1.0"
description = "Heallink AI Engine for voice assistant features"
requires-python = ">=3.9"
license = "Proprietary"
readme = "README.md"
dependencies = [
    "livekit-agents[deepgram,openai,cartesia,silero,turn-detector]~=1.0",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv",
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools]
packages = ["heallink_ai_engine"]